# xdg-xattr

./: Cargo.toml  README.md
src/: lib.rs
