[package]
name = "xdg-xattr"
description = "A simple library to parse XDG extended attributes"
version = "0.1.0"
edition = "2021"
authors = ["Cappy Ishihara <cappy@fyralabs.com>"]
license = "GPL-3.0"
categories = ["filesystem", "parsing"]
keywords = ["xdg", "xattr", "extended-attributes"]
repository = "https://github.com/FyraLabs/xdg-xattr"


[dependencies]
xattr = ">=1"
